--- a/assets/main.css
+++ b/assets/main.css
@@ -88,7 +88,8 @@ input {
 
 button {
   font-size: 1.5rem;
-  padding: 0.5rem 1rem;
+  height: 100%;
+  padding: 0 1rem;
   position: absolute;
   right: 0;
   background-color: #18a7f9;
