--- a/assets/main.css
+++ b/assets/main.css
@@ -121,6 +121,9 @@ button:hover {
   h1 {
     font-size: 4rem;
   }
+  :root {
+    --ti-cursor-font-size: 4rem;
+  }
   .greeting {
     font-size: 1.2rem;
   }
@@ -135,5 +138,8 @@ button:hover {
 @media only screen and (max-width: 460px) {
   h1 {
     font-size: 3rem;
+  }
+  :root {
+    --ti-cursor-font-size: 3rem;
   }
 }
